// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when closed 1`] = `
<Expander
  headerText="The Label"
  id="some-id"
  interestingContent={false}
  onExpanderChange={[Function]}
  open={false}
>
  <ul
    className="src-modules-sidenav-components-menu__menu"
    role="group"
  >
    <li
      className="src-modules-sidenav-components-menu__link"
      key="Label A"
      role="treeitem"
    >
      <MenuLink
        label="Label A"
        onClick={[Function]}
        path="/path/a"
      />
    </li>
  </ul>
</Expander>
`;

exports[`should render correctly when open 1`] = `
<Expander
  headerText="The Label"
  id="some-id"
  interestingContent={false}
  onExpanderChange={[Function]}
  open={true}
>
  <ul
    className="src-modules-sidenav-components-menu__menu"
    role="group"
  >
    <li
      className="src-modules-sidenav-components-menu__link"
      key="Label A"
      role="treeitem"
    >
      <MenuLink
        label="Label A"
        onClick={[Function]}
        path="/path/a"
      />
    </li>
  </ul>
</Expander>
`;
